# 3d-render

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/Modules/: FindAssimp.cmake
include/: camera.hpp  loader.hpp  logger.h  mesh.hpp  model.hpp  shader.hpp  window.hpp
models/skull/: reference.txt
src/: camera.cpp  loader.cpp  loader.hpp  main.cpp  mesh.cpp  mesh.hpp  model.cpp  renderer  shader.cpp  shader.hpp  window.cpp  window.hpp
src/glsl/: model.fs  shader.fs  shader.vs
